trying a fix to make the segmentcontrol smoother on mobile

--- a/src/components/ui/SegmentControl/SegmentControl.scss
+++ b/src/components/ui/SegmentControl/SegmentControl.scss
@@ -90,6 +90,8 @@
   background-color: $background-overlay;
   z-index: 6;
   pointer-events: none;
+  will-change: clip-path;
+  transform: translateZ(0);
 }
 
 .segment-button-overlay {
